tests/fixtures/invalid/pow_list_str_set.py
# Cannot call pow() with List[int], Str, Set[int]
x = pow([1, 2, 3], "hello", {1, 2, 3})
